Fix parallax left gap

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,12 +33,14 @@ body {
   }
 }
 .scroll {
+  position: relative;
   height: 100vh;
   max-height: 100vh;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   perspective: 2px;
+  scroll-behavior: smooth;
 }
 
 .content-section {
