--- a/src/styles/parallax.scss
+++ b/src/styles/parallax.scss
@@ -1,8 +1,9 @@
 .parallax {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
   transform-style: preserve-3d;
+  overflow: hidden;
 
   .wrapper {
     top: 0;
